@startuml CatchAndAuthServices
skinparam classAttributeIconSize 0
skinparam direction top to bottom
skinparam class {
  BackgroundColor #FFF9E6
  BorderColor #333333
  ArrowColor #333333
}

title Application Layer - Catch and Authentication Services

interface ICatchService {
  + ExecuteCapture(item: CaptureItem, target: Pokemon): CatchResult
}

class CatchService {
  - _gameSession: GameSession
  + ExecuteCapture(item: CaptureItem, target: Pokemon): CatchResult
}

class CatchResult <<record>> {
  + IsCaught: bool
  + Shakes: int
  + DisplayMessage: string
  + {static} Success(shakes: int, pokemonName: string): CatchResult
  + {static} Failure(shakes: int, pokemonName: string): CatchResult
}

interface IAuthenService {
  + Register(request: RegisterRequest): bool
  + Login(request: LoginRequest): bool
  + LoadProgress(username: string): bool
  + SaveProgress()
  + SetChampion()
}

class AuthenService {
  - _userRepository: IUserRepository
  - _gameSession: GameSession
  + Register(request: RegisterRequest): bool
  + Login(request: LoginRequest): bool
  + LoadProgress(username: string): bool
  + SaveProgress()
  + SetChampion()
}

class RegisterRequest <<record>> {
  + Username: string
  + Password: string
}

class LoginRequest <<record>> {
  + Username: string
  + Password: string
}

' Relationships
CatchService ..|> ICatchService
CatchService --> GameSession
CatchService --> CatchResult

AuthenService ..|> IAuthenService
AuthenService --> IUserRepository
AuthenService --> GameSession

@enduml</content>
<parameter name="filePath">c:\C#\PokemonConsole\TurnBasedPokemon\Diagram\ClassDiagram\CatchAndAuthServices.puml